# CUDA_DFT

./: CMakeLists.txt  LICENSE  README.md  direct_fourier_transform.cu  direct_fourier_transform.h  main.cpp  sample_100_synth_sources.csv  unit_test_1k_vis_input.csv  unit_test_20_synth_sources.csv  unit_testing.cpp
block_data/: .directory  sources.csv  synthetic_visibilities.csv
sample_data/: 10k_vis_input.csv
